--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
     position: relative;
   }
   
-  .text-overlay {
+  .text-overlay1 {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -38,16 +38,16 @@
     
   }
   
-  .text-overlay p {
+  .text-overlay1 p {
     font-size: 70px;
     text-align: center;
   }
   
-  .text-overlay h4 {
+  .text-overlay1 h4 {
     font-size: 20px;
   }
   
-  .fade-in-text{
+  .fade-in-text1{
     display: none;
   }
 
@@ -194,7 +194,208 @@ footer a:hover {
   text-decoration: underline;
 }
 
+.image-with-text {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.image-with-text img {
+  max-width: 50%;
+  height: auto;
+  
+}
+
+.image-with-text .texte {
+  font-size: 20px;
+}
+
+.bi{
+  font-size: 70px;
+  text-align: center;
+  color: #f3390a;
+}
+.lien{
+  text-align: center;
+}
+
+.ligne {
+  width: 70%;
+  height: 2px;
+  background-color: #f34009;
+  
+}
 
 
 
 
+
+.container {
+  text-align: left;
+}
+
+.left-align {
+  text-align: left;
+}
+
+
+
+.container1 {
+  display: flex;
+  
+}
+
+.image-container1 {
+  position: relative;
+  width: 20%;
+}
+
+.image {
+  width: 100%;
+  height: auto;
+}
+
+.overlay1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s;
+  font-size: 15px;
+}
+
+.image-container1:hover .overlay1 {
+  opacity: 1;
+}
+
+.text {
+  color: #ffffff;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.button {
+  padding: 10px 20px;
+  background-color: #f3390a;
+  color: #000;
+  text-decoration: none;
+  border-radius: 10px;
+}
+
+.container1 {
+  position: relative;
+  width: 1340px; /* Ajustez la largeur selon vos besoins */
+  height: 150px; /* Ajustez la hauteur selon vos besoins */
+}
+
+.image-container {
+  position: relative;
+  width: 500%;
+  height: 200%;
+  overflow: hidden;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.3s;
+}
+
+.text-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  background-color: rgba(0, 0, 0, 0.7); /* Réglez la couleur et la transparence selon vos besoins */
+  transition: opacity 0.3s;
+}
+
+.text-overlay h1 {
+  color: white;
+  font-size: 70px;
+  text-align: center;
+}
+
+.image-container:hover img {
+  transform: scale(1.1); /* Ajustez la valeur selon l'effet souhaité */
+}
+
+.image-container:hover .text-overlay {
+  opacity: 1;
+}
+
+.container {
+  display: flex;
+  
+}
+
+.container p {
+  flex: 10;
+  margin: 20;
+  
+}
+
+.onne{
+  font-size: 45px;
+  color: #f8b55d;
+}
+
+.twwo{
+  font-size: 20px;
+  color: #a9a9a9;
+  margin-top: 50px;
+ 
+}
+
+.free{
+  font-size: 20px;
+  color: #a9a9a9;
+  margin-top: 50px;
+ 
+}
+
+.profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 500px; /* Ajustez la hauteur selon vos besoins */
+}
+
+.profile i {
+  font-size: 200px; /* Ajustez la taille de l'icône selon vos besoins */
+  margin-bottom: 20px; /* Ajustez la marge inférieure selon vos besoins */
+  color: #f8b55d;
+}
+.ji{
+  font-size: 20px;
+  text-align: center;
+  color: #a9a9a9;
+}
+
+
+.fefe{
+  font-size: 60px;
+  text-align: center;
+  color: #f8b55d;
+}
+
+.fifi{
+
+  font-size: 20px;
+  text-align: center;
+  color: #181717;
+}
